# reyn

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REYN.md  SECURITY.md  agent-os.yaml  conftest.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  reyn.local.yaml  reyn.local.yaml.example  reyn.yaml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dogfood_finding.yml  feature_request.yml
.github/workflows/: _tmp_netns_diag.yml  check-pr-closing-intent.yml  dogfood-finding-triage.yml  pages.yml  release.yml  sandbox-landlock-deny-gate.yml  sandbox-linux-live-x86_64.yml  test.yml  wheel-reachability.yml
.mkdocs/: mkdocs.yml
.mkdocs/overrides/: main.html
agent_os/: __init__.py  agent.py  artifact_validator.py  console_logger.py  control_ir_executor.py  eval_judge.py  eval_models.py  eval_runner.py  event_persister.py  events.py  llm.py  models.py  normalizer.py  rich_logger.py  runtime.py  validation.py  workspace.py
compiler/: __init__.py  eval_loader.py  expander.py  formatter.py  ir.py  linter.py  loader.py  parser.py
cookbook/configs/: with-mcp.yaml
cookbook/eval-a-skill/: README.md  transcript.example.txt
cookbook/improve-a-skill/: README.md
cookbook/multi-agent-research/: README.md
cookbook/research-topic/: README.md
cookbook/translate-doc/: README.md
cookbook/weekly-summary/: README.md
cookbook/write-readme/: README.md
docs/: README.md  feature-map.md  index.ja.md  index.md  start.ja.md  start.md
docs/agent/: README.md  eval-builder-rubric.md  glossary.md  skill-builder-checklist.md  skill-importer-mapping.md  skill-improver-criteria.md
docs/apps/: app_builder.md  app_improver.md  eval_builder.md
docs/concepts/: a2a.ja.md  a2a.md  architecture.ja.md  architecture.md  async-skill-execution.ja.md  async-skill-execution.md  care-boundary.ja.md  care-boundary.md  chat-compaction.md  dogfood-scenarios.ja.md  dogfood-scenarios.md  evaluation.ja.md  evaluation.md  events.ja.md  events.md  llm-as-decision-engine.ja.md  llm-as-decision-engine.md  llm-invocation-surfaces.ja.md  llm-invocation-surfaces.md  mcp.ja.md  mcp.md  memory.ja.md  multi-agent.ja.md  multi-agent.md  operational-intelligence.ja.md  operational-intelligence.md  permission-model.ja.md  permission-model.md  phase-vs-skill-vs-os.md  plan-mode.ja.md  plan-mode.md  postprocessor.ja.md  postprocessor.md  preprocessor.ja.md  preprocessor.md  principles.ja.md  principles.md  python-pure-mode.ja.md  python-pure-mode.md  python-safe-mode.ja.md  (+19 more)
docs/contributing/: cli-redesign.md
docs/cookbook/: README.md
docs/dev/: mcp-a359-windows-verification.md  mcp-holistic-seam-design.md  offload-seam-design.md
docs/en/: index.md
docs/gateway/: authoring-guide.md
docs/guide/: evaluation.ja.md  evaluation.md
docs/ja/: index.md
docs/journal/: README.md
docs/openui/: README.md
docs/plugins/: authoring-guide.md
docs/proposals/: present-layer.md  reyn-pipeline-improvements-proposal.md  reyn-pipeline-is2-is6-open-decisions.md  reyn-pipeline-reconciliation.md  reyn-pipeline-refactor-plan.md  reyn-pipeline-spec-v0.8.md  reyn-pipeline-v0.9-design-resolutions.md  sp-autonomy-revision.md
docs/reference/: agent-worktree-cleanup.ja.md  agent-worktree-cleanup.md  builtin-models.ja.md  builtin-models.md  dogfood-sp-render.ja.md  dogfood-sp-render.md  dogfood-tracing.md  glossary.md  test-tier-audit.ja.md  test-tier-audit.md  upgrade-policy.md  (+1 more)
dogfood/: batch_b44.yaml  batch_b45.yaml  batch_b46.yaml  batch_b47.yaml  batch_b52.yaml  batch_b53.yaml  batch_b54.yaml  batch_b55.yaml  batch_b56.yaml  batch_b57.yaml
dsl/: models.yaml
examples/: README.md
overrides/: main.html
pipelines/: hello.yaml
scripts/: _reyn_web_proc.py  _tmp_netns_diag_3030.py  check_pr_closing_intent.py  cleanup_agent_worktrees.py  codeact_oracle_verify.py  compaction_outcome_dist.py  crop_art.py  detect_attractor.py  df2187_harness.py  dogfood_1822_content_threat_verify.py  dogfood_aggregate.py  dogfood_b23_driver.py  dogfood_b24_driver.py  dogfood_batch_config.py  dogfood_batch_dispatch.py  dogfood_fp_retest.py  dogfood_fresh_reset.sh  dogfood_g4_spike.py  dogfood_long_session.py  dogfood_rag_helper.py  dogfood_s1_driver.py  dogfood_s5_b18_driver.py  dogfood_s6_b18_driver.py  dogfood_s6_b20_driver.py  dogfood_sliceP3_parity.py  dogfood_sp_render.py  dogfood_trace.py  dogfood_variant_replay.py  embedding_bench.py  gen_docs_redirects.py  hn_research.py  llm_replay.py  mcp_probe.py  mcp_smoke.py  mcp_stdio_repro.py  mirror_reference_docs.py  rekey_fixtures.py  s7_driver.py  s8_b18_driver.py  s9_b18_driver.py  (+13 more)
tests/: README.md  _async_wait.py  conftest.py  test_0060_d5b_docs_mirror.py  test_0060_d5c_error_rail.py  test_0060_d5d_doc_ref_registry_gate.py  test_0060_f3b_sibling_builtins.py  test_0060_phase1_f3a_builtin_tier.py  test_0060_phase1_layer_a.py  test_0060_phase2_f3b_builtin_content.py  test_0061_repo_self_access_parity.py  test_0062_structured_output.py  test_1128_step3_token_budget_headtail.py  test_1199_effective_permission.py  test_1199_s31b2a_write_gate.py  test_1199_s31b2b_read_file_gates.py  test_1199_s31b2c2_http_get.py  test_1199_s31b2c_oprt_gates.py  test_1199_s31b_mcp_cutover.py  test_1199_s31c1_swebench_only.py  test_1199_s31c2_full_intersection.py  test_1199_s34_part1_fs_op_gate.py  test_1200_3axis_uniformity.py  test_1200_chat_fs_backend.py  test_1289_frontend_container_chat.py  test_1303_si1_safe_embed_index.py  test_1326_sandbox_policy_agent_level.py  test_1503_mcp_install_error_surface.py  test_1765_durability_worker.py  test_1765_snapshot_journal_off_loop.py  test_1765_state_log_durability.py  test_1800_c_staging.py  test_1800_hook_config_schema.py  test_1800_hook_render.py  test_1800_hook_shell_runner.py  test_1800_wake_drain.py  test_1909_external_tool_result_narrowing.py  test_1909_intra_turn_opt_in_narrowing.py  test_2068_skill_end_all_exits_1800.py  test_2072_cross_session_push.py  (+1316 more)
website/: TODO.md  architecture.html  build.py  copy.yaml  index.html
(+3678 files in other folders)
