[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reyn"
version = "0.1.0a2"
description = "LLM-driven phase execution engine with a Markdown DSL"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Tetsuya Yasuda" },
]
keywords = [
    "llm",
    "agent",
    "workflow",
    "dsl",
    "multi-agent",
    "orchestration",
    "os",
    "phase",
    "LLM workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System",
    "Typing :: Typed",
]

dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",   # plain CUI (--cui flag) keeps this
    "ddgs>=8.0",
    "textual>=0.50",         # default TUI mode (PR-cli-2)
    "numpy>=1.24",           # RAG index backend cosine similarity (ADR-0033)
    "croniter>=2.0",         # cron expression parsing for FP-0009 Component B
]

[project.urls]
Homepage = "https://tya5.github.io/reyn/"
Documentation = "https://tya5.github.io/reyn/docs/"
Repository = "https://github.com/tya5/reyn"
Issues = "https://github.com/tya5/reyn/issues"
Changelog = "https://github.com/tya5/reyn/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pytest-asyncio>=0.23",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]
mcp = ["mcp>=1.0"]
release = [
    "build>=1.0",
    "twine>=5.0",
]
sandbox-linux = [
    "landlock>=1.0",
    "pyseccomp>=0.1",
]
voice = [
    "sounddevice>=0.4.6",
    "faster-whisper>=1.0.0",
]
eval = [
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.scripts]
reyn = "reyn._cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["reyn*"]

[tool.setuptools.package-data]
"reyn" = ["py.typed", "stdlib/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "venv",
    ".venv",
    "site",
    "dist",
    "build",
    "tmp",
    "zenn-book",
    ".claude",
]

[tool.ruff.lint]
# Pyflakes (real bugs) + import sorting only. The pycodestyle style
# rules (E501 long lines, E402 module-level imports, E741 ambiguous
# names) are intentionally not enforced — we keep the line-length
# target as a guideline rather than a hard rule, since wrapping
# Reyn's narrative comments and skill scripts often hurts
# readability more than it helps.
select = ["F", "I"]
ignore = [
    # F401: re-exports in __init__.py and TYPE_CHECKING blocks make
    # these false positives common.
    "F401",
    # F811: local imports inside functions for clarity (e.g. lazy
    # imports of optional deps) trigger this.
    "F811",
    # F821: forward references in string annotations
    # (`x: "Foo | None"`) confuse pyflakes; the actual import lives
    # under TYPE_CHECKING.
    "F821",
    # F841: explicit `_ = ...` placeholders or guard variables that
    # aren't used outside an assertion are intentional.
    "F841",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
