[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reyn"
version = "0.1.0a2"
description = "LLM-driven phase execution engine with a Markdown DSL"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Tetsuya Yasuda" },
]
keywords = [
    "llm",
    "agent",
    "workflow",
    "dsl",
    "multi-agent",
    "orchestration",
    "os",
    "phase",
    "LLM workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System",
    "Typing :: Typed",
]

dependencies = [
    "litellm>=1.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",   # plain CUI (--cui flag) keeps this
    "ddgs>=8.0",
    "rich>=13",              # inline CUI renderer (direct dep; was transitive via textual)
    "numpy>=1.24",           # RAG index backend cosine similarity (ADR-0033)
    "croniter>=2.0",         # cron expression parsing for FP-0009 Component B
    "charset-normalizer>=3.0",  # #1452 file__read encoding detection (MIT, pure-python)
    "fastmcp==3.4.2",        # MCP client is a first-class capability Session.__init__ always constructs (import chain: session -> mcp.connection_service -> mcp.message_handler -> fastmcp), so fastmcp is effectively required — promoted from the former [mcp] extra so a core `reyn chat` no longer ImportErrors on fresh installs.
]

[project.urls]
Homepage = "https://tya5.github.io/reyn/"
Documentation = "https://tya5.github.io/reyn/docs/"
Repository = "https://github.com/tya5/reyn"
Issues = "https://github.com/tya5/reyn/issues"
Changelog = "https://github.com/tya5/reyn/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "ruff",
    "mypy",
    "pytest-asyncio>=0.23",
    "pre-commit>=3",
]
fetch = [
    "trafilatura>=1.8",       # higher-quality HTML extraction for web__fetch (issue #355)
]
# FP-0043 local embedding backend — credential-free semantic action search +
# RAG via sentence-transformers (HF ecosystem). Pulls torch as a transitive
# dep (~700MB); kept extras-only so the base install size is unaffected.
local-embed = [
    "sentence-transformers>=2.7",
    "torch>=2.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]
web = [
    # #1621: upper-bounds pin (owner steer) — CI's unpinned resolve pulled
    # fastapi 0.137 + starlette 1.3.1, whose ``_IncludedRouter`` in ``app.routes``
    # breaks the flat route-introspection the web tests assert on. Pin below 1.3
    # (the introducing release; local 1.0.0 + the highest <1.3 are working) and
    # cap fastapi <0.137 (the release that floors starlette to 1.3) so CI is
    # reproducible. starlette pinned directly (it is a transitive of fastapi).
    # forward-migration to the new route model is a separate optional follow-up.
    "fastapi>=0.110,<0.137",
    "starlette>=1.0,<1.3",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]
# `mcp` is now a no-op back-compat alias: `fastmcp` moved into core `dependencies`
# above (the MCP client is always constructed by `Session.__init__`). Kept as an
# empty extra so existing `pip install -e ".[mcp]"` invocations (CI, user docs,
# `reyn[mcp]`) keep resolving instead of erroring on an unknown extra.
mcp = []
# #2608 H4: filesystem watcher external-event source (`fs_watch:` config block ->
# `file_changed` hook). Extras-only — a build with no fs_watch config configured
# never imports this, and a build WITH config but no extra installed degrades to
# "feature off + warn" (see reyn.runtime.fs_watcher module docstring).
fs-watch = ["watchdog>=4.0"]
release = [
    "build>=1.0",
    "twine>=5.0",
]
sandbox-linux = [
    # No stable landlock >=1.0 exists on PyPI — only 1.0.0.dev* pre-releases.
    # A specifier that names a pre-release opts this requirement into them
    # (PEP 440), so `>=1.0.0.dev4` installs where a bare `>=1.0` resolves to
    # nothing (pip excludes pre-releases by default). #1693.
    "landlock>=1.0.0.dev4",
    "pyseccomp>=0.1",
]
voice = [
    "sounddevice>=0.4.6",
    "faster-whisper>=1.0.0",
]
# OpenTelemetry (OTLP) export surface — opt-in observability. Reyn core stays
# SDK-free unless an operator activates OTEL export (an OTLP endpoint plus this
# extra); when the SDK isn't installed the exporter stays not-attached, fail-open.
observability = [
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "opentelemetry-sdk>=1.20",
]
# FP-0041 #489 plugins-api PR-2: sample webhook plugins use OSS SDKs.
# Reyn core stays SDK-free for operators who don't activate the
# samples; SDK deps are opt-in via these extras:
#
#   pip install reyn[sample_slack]      # = reyn + slack-bolt
#   pip install reyn[sample_line]       # = reyn + line-bot-sdk
#   pip install reyn[all-samples]       # = reyn + both
#
# When the SDK isn't installed, ``register_router`` returns ``None``
# with a clear log message; reyn boots without crashing.
sample_slack = ["slack-bolt>=1.18"]
sample_line = ["line-bot-sdk>=3.0"]
all-samples = ["slack-bolt>=1.18", "line-bot-sdk>=3.0"]

[project.scripts]
reyn = "reyn._cli:main"

# FP-0041 #489 plugin framework: sample webhook plugins bundled with reyn.
# External plugins register the same way via their own pyproject.toml.
[project.entry-points."reyn.webhooks"]
sample_slack = "reyn.gateway.sample_slack:register_router"
sample_line = "reyn.gateway.sample_line:register_router"

# FP-0041 #489 plugins-api PR-2: sample plugins now use OSS SDKs for
# transport-specific protocol (= slack-bolt / line-bot-sdk). Installed
# via optional pip extras so reyn core stays SDK-free for operators
# who don't activate the samples:
#
#   pip install reyn[sample_slack]      # = reyn + slack-bolt
#   pip install reyn[sample_line]       # = reyn + line-bot-sdk
#   pip install reyn[all-samples]       # = reyn + both
#
# When the SDK isn't installed, ``register_router`` returns ``None``
# with a clear log message so reyn boots without crashing.

[tool.uv]
# Keep local `uv lock` runs compatible with the CI `lock-check` gate's pinned
# uv version (see .github/workflows/test.yml). uv is pre-1.0 and has bumped
# the lockfile format across minor releases; without this, a contributor
# on a newer/older uv minor could re-lock uv.lock into a format the
# CI-pinned uv rejects, making a locally-green `uv lock --check` fail in CI.
required-version = ">=0.11,<0.12"

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["src"]
# dogfood/fixtures/ ships failing-test workspaces consumed by
# dogfood/scripts/ runners on isolated tmp copies. They MUST NOT
# be collected by the project's main pytest suite — the placeholder
# stubs (= NotImplementedError) would fail CI at collection time.
#
# .claude/worktrees/ holds transient git worktrees created by the Agent
# tool's `isolation: "worktree"` mode (gitignored, local-only). Each is a
# full copy of the tree at some other branch state, so a rootdir
# `pytest -q` would otherwise collect tens of thousands of stale-import
# test modules. Declaring an explicit norecursedirs drops pytest's default
# `.*` dotdir exclusion, so `.claude` (and `.reyn`) must be listed back.
norecursedirs = ["dogfood/fixtures", ".reyn", ".claude", "reyn-worktrees"]

# Hatchling build config (0061 §3.1 — replaces the former
# [tool.setuptools.packages.find] / [tool.setuptools.package-data] / setup.py
# build_py cmdclass trio). `packages` maps 1:1 to the old `packages.find`
# clause; the three `artifacts` entries preserve — byte-for-byte — the old
# `package-data` glob (py.typed, builtin/**/*, environment/*.Dockerfile).
# `artifacts` (not `include`) is used deliberately: it forces inclusion
# regardless of Hatchling's default VCS-tracked-file selection, so these three
# entries can never silently drop out if a future file under one of these
# globs is untracked/gitignored (the top omission risk called out in 0061
# §3.1 — dropping any of the 3 = a silently-broken wheel).
[tool.hatch.build.targets.wheel]
packages = ["src/reyn"]
artifacts = [
    "src/reyn/py.typed",
    "src/reyn/builtin/**/*",
    "src/reyn/environment/*.Dockerfile",
]

# 0061 §3.2/§3.3 — the reachable-set SSoT: docs-delivery force-include below
# mirrors `reyn.runtime.reyn_src.FORCE_INCLUDE_ENTRIES` (the single Python
# declaration; TOML can't import Python, so the two are kept in sync by
# construction of the parity gate in tests/test_0061_repo_self_access_parity.py,
# which fails if the two drift). `docs/` stays at the repo root (mkdocs
# `docs_dir: ../docs` unaffected) — this only maps it into the wheel's
# installed tree.
[tool.hatch.build.targets.wheel.force-include]
"README.md" = "reyn/_bundled/README.md"
"CHANGELOG.md" = "reyn/_bundled/CHANGELOG.md"
"docs" = "reyn/_bundled/docs"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "venv",
    ".venv",
    "site",
    "dist",
    "build",
    "tmp",
    "zenn-book",
    ".claude",
]

[tool.ruff.lint]
# Pyflakes (real bugs) + import sorting only. The pycodestyle style
# rules (E501 long lines, E402 module-level imports, E741 ambiguous
# names) are intentionally not enforced — we keep the line-length
# target as a guideline rather than a hard rule, since wrapping
# Reyn's narrative comments and skill scripts often hurts
# readability more than it helps.
select = ["F", "I"]
ignore = [
    # F401: re-exports in __init__.py and TYPE_CHECKING blocks make
    # these false positives common.
    "F401",
    # F811: local imports inside functions for clarity (e.g. lazy
    # imports of optional deps) trigger this.
    "F811",
    # F821: forward references in string annotations
    # (`x: "Foo | None"`) confuse pyflakes; the actual import lives
    # under TYPE_CHECKING.
    "F821",
    # F841: explicit `_ = ...` placeholders or guard variables that
    # aren't used outside an assertion are intentional.
    "F841",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
